# cloudbank_toy_data_portal

./: .gitignore  .sesskey  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
src/cloudbank_portal/: __init__.py  app.py
src/cloudbank_toy_data_portal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app.py
